--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -4,7 +4,7 @@
 {{! template-lint-disable style-concatenation }}
 {{! template-lint-disable no-inline-styles }}
 
-<SidebarContainer>
+<SidebarContainer class="diagrams">
   <:sidebar>
     <div class="au-c-sidebar">
       <div>
