oph-861 | Diagram list overview (#164)
* refactor: remove versions section from the process detail page

Refs: oph-861

* feat: create new page where we show all diagrams

Refs: oph-861

* refactor: show the versions on the side and the diagram on the left

Refs: oph-861

* refactor: change content of version card + show the first diagram on load

Refs: oph-861

* feat: create file viewer + metadata-card component

Refs: oph-861

* feat: show table with diagram files in diagram-list

Refs: oph-861

* feat: make the title of the diagram file in the diagram-list clickable

Refs: oph-861

* feat: filter out the lists that do not have active files

Refs: oph-861

* feat: add toolbar on detail of list with the modified time

Refs: oph-861

* feat: show a lock on older versions and you can only edit the current one

Refs: oph-861

* refactor: remove sortable columns on diagram table and sort on position as default

Refs: oph-861

* fix: sort on diagram position in diagram list

Refs: oph-861

* fix: correct model reference in breadcrumb for process templates

* refactor: override styling of sidebar container to scroll separately

Refs: oph-861

* feat: the file viewer component support on bpmnloaded and svg loaded + use it in visual component

Refs: oph-861

* fix: only let sidebar css class scroll on y-axis

Refs: oph-861

* feat: last diagram of list cannot be removed

Show a warning in the delete modal

Refs: oph-861

* fix: only make the scrollable sidebar applicable to the diagrams page

It broke the main page

Refs: oph-861

* fix: linting

* refactor: remove tests that are not used

Refs: oph-861

---------

Co-authored-by: Andres Vergauwen <andres.vergauwen@hotmail.com>

--- a/app/styles/components/_sidebar-container.scss
+++ b/app/styles/components/_sidebar-container.scss
@@ -59,3 +59,27 @@ Tracking issue: https://github.com/appuniversum/ember-appuniversum/issues/86 */
 .au-c-list-navigation__link {
   padding: $au-unit-small;
 }
+
+.diagrams {
+  .au-c-sidebar {
+    overflow-y: auto !important;
+  }
+
+  .au-c-sidebar-container__sidebar {
+    height: 100% !important;
+    overflow-y: auto !important;
+    flex-shrink: 0 !important;
+  }
+
+  @media (width <= 1023px) {
+    .au-c-sidebar-container__sidebar {
+      height: auto !important;
+    }
+  }
+
+  .au-c-sidebar-container__content {
+    height: 100% !important;
+    overflow-y: auto !important;
+    flex-grow: 1 !important;
+  }
+}
