feat: add attachment management to information asset with upload and download functionality

--- a/app/components/process/diagram/visual.hbs
+++ b/app/components/process/diagram/visual.hbs
@@ -94,7 +94,7 @@
   @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
   @accept=".bpmn,.vsdx"
   @isSensitiveDataDetectInUploadFlow={{false}}
-  @updateProcess={{this.addFileToProcess}}
+  @updateModel={{this.addFileToProcess}}
   @extractBpmnElements={{this.extractBpmnElements}}
   @onFinishUpload={{this.diagramUploaded}}
   @modalOpen={{this.replaceModalOpened}}
