--- a/app/components/icr/attachments.hbs
+++ b/app/components/icr/attachments.hbs
@@ -37,17 +37,14 @@
 
   <:subheader>
     <AuHelpText @skin="secondary">
-      Bijlagen kunnen worden toegevoegd om het diagram te verduidelijken in alle
-      bestandsformaten, behalve
-      <span class="au-u-italic">.bpmn</span>
-      en
-      <span class="au-u-italic">.vsdx</span>.
+      Bijlagen kunnen worden toegevoegd om de informatie asset te verduidelijken
+      in alle bestandsformaten.
     </AuHelpText>
   </:subheader>
 
   <:card>
     <Process::RelevantLinks
-      @process={{@process}}
+      @process={{@informationAsset}}
       @canEdit={{@canEdit}}
       @isAddModalOpen={{this.isAddLinkModalOpen}}
       @onLinkAdded={{fn (mut this.isAddLinkModalOpen) false}}
@@ -82,7 +79,6 @@
             @currentSorting={{this.sortAttachments}}
             @label="Toegevoegd op"
           />
-          <th>Gelinkt aan</th>
           <th></th>
           {{#if @canEdit}}<th></th>{{/if}}
         </c.header>
@@ -99,16 +95,6 @@
             <td>{{file-size-format attachment.size}}</td>
             <td>{{attachment.extension}}</td>
             <td>{{date-format attachment.created true}}</td>
-            <td>{{attachment._source}}
-              {{#if attachment.informationAsset}}
-                <AuLink
-                  @route="information-assets.edit"
-                  @model={{attachment.informationAsset.id}}
-                >
-                  ({{attachment.informationAsset.title}})
-                </AuLink>
-              {{/if}}
-            </td>
             <td>
               <AuButton
                 @icon="download"
@@ -126,7 +112,6 @@
                   @alert="true"
                   @width="block"
                   @hideText="true"
-                  @disabled={{attachment.informationAsset}}
                   {{on "click" (fn this.openDeleteModal attachment)}}
                 >Verwijder</AuButton>
               </td>
@@ -142,9 +127,9 @@
   @header="Voeg bijlage toe"
   @title="Bestand selecteren"
   @helpTextDragDrop="Bestand wordt meteen toegevoegd aan bibliotheek na selectie"
-  @forbidden=".bpmn,.vsdx"
   @multiple="true"
-  @updateModel={{this.addFileToProcess}}
+  @modelName="Informatie asset"
+  @updateModel={{this.addFileToIcr}}
   @onFinishUpload={{this.attachmentsUploaded}}
   @modalOpen={{this.addModalOpened}}
   @closeModal={{this.closeAddModal}}
