--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -23,6 +23,7 @@
 
 /* COMPONENTS */
 @import 'components/cards';
+@import 'components/diagrams';
 @import 'components/sidebar-container';
 @import 'components/table-message';
 @import 'components/bpmn-viewer';
