--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -1,12 +1,11 @@
 {{page-title "Diagrammen"}}
 {{breadcrumb "Diagram" route="processes.process.diagrams" model=@model.id}}
-{{! template-lint-disable no-invalid-interactive }}
-{{! template-lint-disable style-concatenation }}
-{{! template-lint-disable no-inline-styles }}
 
+{{! template-lint-disable no-invalid-interactive }}
+{{! template-lint-disable no-inline-styles }}
 <SidebarContainer class="diagrams">
   <:sidebar>
-    <div class="au-c-sidebar">
+    <div class="au-c-sidebar background-white">
       <div>
         <AuHeading
           @skin="5"
@@ -18,13 +17,13 @@
           {{#each @model.lists as |diagramList|}}
             <div
               {{on "click" (fn this.openDiagramList diagramList)}}
-              class="au-u-flex au-u-flex--column au-u-padding au-u-padding-top-small au-u-padding-bottom"
-              style="
-               {{if
-                (eq this.selectedDiagramList.id diagramList.id)
-                'background-color: var(--au-select-text-bg);'
-                'background-color: var(--au-white);'
-              }} border:1.5px solid var(--au-gray-200); "
+              class="au-u-flex au-u-flex--column au-u-padding au-u-padding-top-small au-u-padding-bottom
+                {{if
+                  (eq this.selectedDiagramList.id diagramList.id)
+                  'background-gray border-right-selected'
+                  'background-white'
+                }}"
+              style="border:1.5px solid var(--au-gray-200); "
             >
               <div class="au-u-flex au-u-flex--column au-u-flex--between">
                 <p class="au-u-h5">{{date-format diagramList.created true}}</p>
