refactor: make breadcrum of diagrams page "diagrammen"
Refs: oph-781

--- a/app/templates/processes/process/diagrams.hbs
+++ b/app/templates/processes/process/diagrams.hbs
@@ -1,5 +1,5 @@
 {{page-title "Diagrammen"}}
-{{breadcrumb "Diagram" route="processes.process.diagrams" model=@model.id}}
+{{breadcrumb "Diagrammen" route="processes.process.diagrams" model=@model.id}}
 
 {{! template-lint-disable no-invalid-interactive }}
 {{! template-lint-disable no-inline-styles }}
