--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -23,7 +23,6 @@
 
 /* COMPONENTS */
 @import 'components/cards';
-@import 'components/diagrams';
 @import 'components/sidebar-container';
 @import 'components/table-message';
 @import 'components/bpmn-viewer';
@@ -33,3 +32,4 @@
 @import 'components/c-favorite';
 @import 'components/c-tooltip';
 @import 'shame';
+@import 'diagrams';
