--- a/app/styles/_diagrams.scss
+++ b/app/styles/_diagrams.scss
@@ -33,6 +33,11 @@
   background-color: var(--au-white);
 }
 
+/* Could not find the white background class from AU */
+.background-light-blue {
+  background-color: var(--au-blue-200);
+}
+
 .thin-scrollbar {
   scrollbar-width: thin;
   scrollbar-color: #888 #f1f1f1;
