fix: update header label from "Gelinkt aan" to "Gekoppeld aan" in attachments table

--- a/app/components/process/attachments.hbs
+++ b/app/components/process/attachments.hbs
@@ -82,7 +82,7 @@
             @currentSorting={{this.sortAttachments}}
             @label="Toegevoegd op"
           />
-          <th>Gelinkt aan</th>
+          <th>Gekoppeld aan</th>
           <th></th>
           {{#if @canEdit}}<th></th>{{/if}}
         </c.header>
