refactor: open the new download component when clicking the download button in the diagrams table
Refs: oph-903

--- a/app/components/diagram-list/table.hbs
+++ b/app/components/diagram-list/table.hbs
@@ -41,7 +41,7 @@
               @skin="link"
               @width="block"
               @hideText="true"
-              {{on "click" (fn this.downloadFile diagram.diagramFile)}}
+              {{on "click" (fn (mut this.fileToDownload) diagram.diagramFile)}}
             >Download</AuButton>
           </td>
           {{#if @canEdit}}
@@ -102,3 +102,10 @@
     </AuButtonGroup>
   </:footer>
 </AuModal>
+
+<File::DownloadModal
+  @isModalOpen={{this.fileToDownload}}
+  @onModalClosed={{fn (mut this.fileToDownload) undefined}}
+  @onDownloadSuccesful={{fn (mut this.fileToDownload) undefined}}
+  @fileModel={{this.fileToDownload}}
+/>
