Feature/add attachments to information asset (#167)
* Add information assets feature with routing, controller, and templates

* Refactor sorting logic

* Reset filters to default values in information assets controller

* Remove unused services from information assets controller

* feat: Refactor ICR card and modal components for improved asset management

- Simplified the rendering of scores in the ICR card by removing unnecessary conditional checks.
- Updated the asset editing functionality to transition directly to the edit route.
- Enhanced the score component to handle hover states and clicks more effectively.
- Modified the ICR modal to utilize mut helpers for score changes and checkbox states.
- Introduced a delete modal component for confirming asset deletions.
- Implemented a new controller for editing information assets, including validation and save logic.
- Added functionality to create new information assets and manage their state.
- Updated the information assets index and edit templates for better user experience and data handling.
- Improved the information asset model to include archiving logic and default values for attributes.
- Adjusted routing to support new edit and index routes for information assets.
- Enhanced styles for better visual feedback on user interactions.

* Update page title for error template to reflect information asset not found

* refactor: replace dropTask with task for improved concurrency handling in components and controllers

* feat: add attachment management to information asset with upload and download functionality

* refactor: remove console log from attachments fetching logic

* fix: update role attribute syntax for dropdown buttons in attachments component

* refactor: update import syntax for service in multiple components and routes

* refactor: replace informationAsset getter with direct args access in attachments component

* fix: update header label from "Gelinkt aan" to "Gekoppeld aan" in attachments table

* 

--- a/app/components/icr/attachments.hbs
+++ b/app/components/icr/attachments.hbs
@@ -4,8 +4,8 @@
   <:header>
     <AuButtonGroup>
       {{#if @canEdit}}
-        {{! template-lint-disable require-context-role }}
         <AuDropdown @title="Voeg toe" @skin="secondary" @alignment="center">
+          {{! template-lint-disable require-context-role }}
           <AuButton
             role="menuitem"
             @icon="link-external"
@@ -37,17 +37,14 @@
 
   <:subheader>
     <AuHelpText @skin="secondary">
-      Bijlagen kunnen worden toegevoegd om het diagram te verduidelijken in alle
-      bestandsformaten, behalve
-      <span class="au-u-italic">.bpmn</span>
-      en
-      <span class="au-u-italic">.vsdx</span>.
+      Bijlagen kunnen worden toegevoegd om de informatie asset te verduidelijken
+      in alle bestandsformaten.
     </AuHelpText>
   </:subheader>
 
   <:card>
     <Process::RelevantLinks
-      @process={{@process}}
+      @process={{@informationAsset}}
       @canEdit={{@canEdit}}
       @isAddModalOpen={{this.isAddLinkModalOpen}}
       @onLinkAdded={{fn (mut this.isAddLinkModalOpen) false}}
@@ -66,23 +63,26 @@
             @field="name"
             @currentSorting={{this.sortAttachments}}
             @label="Bestandsnaam"
+            {{on "click" (fn this.updateSort this.sortAttachments)}}
           />
           <AuDataTableThSortable
             @field="size"
             @currentSorting={{this.sortAttachments}}
             @label="Grootte"
+            {{on "click" (fn this.updateSort this.sortAttachments)}}
           />
           <AuDataTableThSortable
             @field="extension"
             @currentSorting={{this.sortAttachments}}
             @label="Extensie"
+            {{on "click" (fn this.updateSort this.sortAttachments)}}
           />
           <AuDataTableThSortable
             @field="created"
             @currentSorting={{this.sortAttachments}}
             @label="Toegevoegd op"
+            {{on "click" (fn this.updateSort this.sortAttachments)}}
           />
-          <th>Gekoppeld aan</th>
           <th></th>
           {{#if @canEdit}}<th></th>{{/if}}
         </c.header>
@@ -99,16 +99,6 @@
             <td>{{file-size-format attachment.size}}</td>
             <td>{{attachment.extension}}</td>
             <td>{{date-format attachment.created true}}</td>
-            <td>{{attachment._source}}
-              {{#if attachment.informationAsset}}
-                <AuLink
-                  @route="information-assets.edit"
-                  @model={{attachment.informationAsset.id}}
-                >
-                  ({{attachment.informationAsset.title}})
-                </AuLink>
-              {{/if}}
-            </td>
             <td>
               <AuButton
                 @icon="download"
@@ -126,7 +116,6 @@
                   @alert="true"
                   @width="block"
                   @hideText="true"
-                  @disabled={{attachment.informationAsset}}
                   {{on "click" (fn this.openDeleteModal attachment)}}
                 >Verwijder</AuButton>
               </td>
@@ -142,9 +131,9 @@
   @header="Voeg bijlage toe"
   @title="Bestand selecteren"
   @helpTextDragDrop="Bestand wordt meteen toegevoegd aan bibliotheek na selectie"
-  @forbidden=".bpmn,.vsdx"
   @multiple="true"
-  @updateModel={{this.addFileToProcess}}
+  @modelName="Informatie asset"
+  @updateModel={{this.addFileToIcr}}
   @onFinishUpload={{this.attachmentsUploaded}}
   @modalOpen={{this.addModalOpened}}
   @closeModal={{this.closeAddModal}}
